--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #fff !important;
+  overflow: hidden;
 }
 .hero-group {
   border: 1.5px solid rgba(243, 207, 0, 0.36);
@@ -13,19 +14,21 @@ body {
   top: -52px;
   right: -42px;
 }
+::-webkit-scrollbar:horizontal {
+  display: none;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-html,body
-{
-    width: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
+html,
+body {
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
-
 
 .header-component {
   background-color: #f3cf00;
@@ -536,15 +539,36 @@ footer {
   .copyright-text {
     margin-top: 1.5rem;
     margin-bottom: 1.7rem;
-
   }
   .hero-img {
     object-fit: cover;
     width: 100%;
   }
-  
+
   .hero-group {
     top: -52px;
     right: -42px;
+  }
+  .options-wrapper {
+    /* background-color: #333; */
+    overflow: auto;
+    white-space: nowrap;
+  }
+  .options-wrapper p {
+    display: inline-block;
+    text-align: center;
+    /* padding: 14px; */
+    text-decoration: none;
+    margin-bottom: 0.5em;
+  }
+  .select-option:first-child {
+    padding-left: 0px;
+  }
+  .select-option:not(:last-child) {
+    margin-right: 12px;
+  }
+  .select-option:first-child.active::before {
+    width: 110%;
+    bottom: -10px;
   }
 }
