--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ body {
   background: #fff !important;
   overflow: hidden;
 }
+
 .hero-group {
   border: 1.5px solid rgba(243, 207, 0, 0.36);
   border-radius: 50%;
@@ -14,9 +15,11 @@ body {
   top: -52px;
   right: -42px;
 }
+
 ::-webkit-scrollbar:horizontal {
   display: none;
 }
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -33,6 +36,7 @@ body {
 .header-component {
   background-color: #f3cf00;
 }
+
 .header-login-btn {
   background: #1f1f1f;
   border-radius: 75px;
@@ -44,6 +48,7 @@ body {
   border: none;
   font-family: "Satoshi-Medium" !important;
 }
+
 .nav-item:not(:last-child) {
   padding-right: 30px;
   position: relative;
@@ -53,6 +58,7 @@ body {
   color: #1f1f1f;
   cursor: pointer;
 }
+
 .nav-item:not(:first-child) {
   padding-left: 30px;
 }
@@ -79,12 +85,15 @@ body {
   line-height: 86px;
   color: #ffffff;
 }
+
 .hero-first-wrapper {
   width: 50%;
 }
+
 .hero-second-wrapper {
   padding-right: 35px;
 }
+
 .hero-img-attach-2 {
   bottom: -29px;
   right: -35px;
@@ -94,10 +103,12 @@ body {
   top: 40px;
   right: 40px;
 }
+
 .hero-img-group {
   top: 0px;
   right: 0px;
 }
+
 .hero-group {
   border: 1.5px solid rgba(243, 207, 0, 0.36);
   border-radius: 50%;
@@ -106,6 +117,7 @@ body {
   top: -50px;
   right: -48px;
 }
+
 .cta-btn-icon-wrapper {
   width: 46px;
   height: 46px;
@@ -115,6 +127,7 @@ body {
   align-items: center;
   justify-content: center;
 }
+
 .hero-cta-btn-wrapper {
   background: #f3cf00;
   border-radius: 41px;
@@ -122,6 +135,7 @@ body {
   padding: 2px;
   cursor: pointer;
 }
+
 .hero-cta-btn-wrapper p {
   margin-left: 22px;
   font-weight: 500;
@@ -147,6 +161,7 @@ body {
   line-height: 49px;
   color: #1f1f1f;
 }
+
 .feature-icon-wrapper {
   width: 52px;
   height: 52px;
@@ -156,6 +171,7 @@ body {
   align-items: center;
   justify-content: center;
 }
+
 .feature-subtitle {
   font-weight: 700;
   font-size: 20px;
@@ -165,6 +181,7 @@ body {
 
   color: #1f1f1f;
 }
+
 .feature-text {
   font-weight: 400;
   font-size: 16px;
@@ -173,6 +190,7 @@ body {
   font-family: "Satoshi-Regular";
   color: #000000;
 }
+
 .suggest-section .section-title {
   width: 29%;
 }
@@ -187,9 +205,11 @@ body {
   position: relative;
   cursor: pointer;
 }
+
 .select-option:not(:last-child) {
   margin-right: 30px;
 }
+
 .options-wrapper {
   border-bottom: 2px solid #d9d9d9;
 }
@@ -197,9 +217,11 @@ body {
 .select-option:first-child {
   padding-left: 12px;
 }
+
 .select-option:last-child {
   padding-right: 12px;
 }
+
 .select-option.active {
   font-weight: 700;
   font-size: 18px;
@@ -208,6 +230,7 @@ body {
   color: #f3cf00;
   position: relative;
 }
+
 .select-option:first-child.active::before {
   content: "";
   position: absolute;
@@ -227,6 +250,7 @@ body {
   background: #f3cf00;
   right: -12px;
 }
+
 .select-option.active::before {
   content: "";
   position: absolute;
@@ -235,6 +259,7 @@ body {
   bottom: -18px;
   background: #f3cf00;
 }
+
 .search-more-btn {
   background: #f3cf00;
 
@@ -249,12 +274,14 @@ body {
   border: none;
   font-family: "Satoshi-Medium";
 }
+
 .advert-card-wrapper {
   background: #efefef;
   height: 368px;
 
   background: #efefef;
 }
+
 .ads-text {
   font-weight: 900;
   font-size: 112px;
@@ -264,9 +291,11 @@ body {
   color: #d8d8d8;
   font-family: "Satoshi-Black";
 }
+
 .trending-recipe-section {
   background: #1f1f1f;
 }
+
 .trending-recipe-section .section-title {
   font-weight: 700;
   font-size: 36px;
@@ -291,6 +320,7 @@ body {
   color: #000000;
   font-family: "Satoshi-Medium";
 }
+
 .pro-section-card {
   background: #1f1f1f;
   border-radius: 39px;
@@ -305,13 +335,16 @@ body {
 
   color: #ffffff;
 }
+
 .kitchen-pro-text span {
   color: #f3cf00;
 }
+
 .pro-right-container {
   margin-left: 69px;
   width: 36%;
 }
+
 .kitchen-pro-content {
   font-weight: 400;
   font-size: 18px;
@@ -320,6 +353,7 @@ body {
   color: #b6b6b6;
   font-family: "Satoshi-Regular";
 }
+
 .kitchen-pro-btn {
   font-weight: 500;
   font-size: 16px;
@@ -332,10 +366,12 @@ body {
   border: none;
   font-family: "Satoshi-Medium";
 }
+
 .pro-icon {
   top: -37px;
   right: -4px;
 }
+
 .subscribe-input,
 .subscribe-input:focus {
   box-shadow: none !important;
@@ -344,9 +380,11 @@ body {
   border: 1px solid #eae6d4 !important;
   border-radius: 6px !important;
 }
+
 footer {
   background: #fefae5;
 }
+
 .subscribe-text {
   font-weight: 500;
   font-size: 18px;
@@ -355,11 +393,13 @@ footer {
   color: #1f1f1f;
   font-family: "Satoshi-Medium";
 }
+
 .message-icon {
   right: 15px;
   top: 5.5px;
   cursor: pointer;
 }
+
 .footer-title {
   font-weight: 700;
   font-size: 18px;
@@ -367,6 +407,7 @@ footer {
   color: #1f1f1f;
   font-family: "Satoshi-Bold";
 }
+
 .footer-text {
   font-weight: 400;
   font-size: 16px;
@@ -381,6 +422,7 @@ footer {
   background: #eae6d4 !important;
   border-radius: 50%;
 }
+
 .copyright-text {
   font-weight: 400;
   font-size: 16px;
@@ -393,23 +435,27 @@ footer {
   font-family: "Satoshi-Regular";
   border-top: 2px solid #dfdbc5;
 }
+
 .half-recipe {
   /* height: 248px; */
   overflow: hidden;
   width: 100%;
   border-radius: 15px;
 }
+
 .full-recipe {
   height: 100%;
   overflow: hidden;
   width: 100%;
   border-radius: 15px;
 }
+
 .half-recipe img {
   object-fit: cover;
   width: 100%;
   /* height: 248px; */
 }
+
 .full-recipe img {
   object-fit: cover;
   width: 100%;
@@ -419,28 +465,34 @@ footer {
 .recipe-flex-gap {
   gap: 20px;
 }
+
 .arrow-icon-wrapper {
   padding: 2.2px 16px;
   border: 1px solid #4d4d4d;
   border-radius: 27px;
   cursor: pointer;
 }
+
 .arrow-icon-wrapper.white_icon {
   border: 1px solid #dadada;
   padding: 8px 20px !important;
   border-radius: 27px;
 }
+
 .left-arrow {
   margin-right: 10px;
 }
+
 .food-img {
   width: 100%;
   border-radius: 15px;
   height: 350px;
 }
+
 .food-img-wrapper {
   position: relative;
 }
+
 .food-img-wrapper:before {
   content: "";
   display: block;
@@ -451,13 +503,12 @@ footer {
   right: 0;
   /* width: 20em;
   height: 20em; */
-  background: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 0) 29.69%,
-    rgba(0, 0, 0, 0.7) 100%
-  );
+  background: linear-gradient(180deg,
+      rgba(0, 0, 0, 0) 29.69%,
+      rgba(0, 0, 0, 0.7) 100%);
   border-radius: 15px;
 }
+
 .food-img-wrapper .food-name,
 .food-img-wrapper .hero-section-food-name {
   font-weight: 500;
@@ -471,75 +522,94 @@ footer {
   bottom: 0;
   width: 100%;
 }
+
 .food-img-wrapper .hero-section-food-name {
   font-weight: 700;
   font-family: "Satoshi-Bold";
 }
+
 @media (max-width: 767px) {
   .hero-first-wrapper {
     width: 100%;
     margin-bottom: 60px;
     text-align: center;
   }
+
   .hero-text {
     font-size: 30px;
     line-height: 40px;
   }
+
   .hero-second-wrapper {
     padding-right: 0;
   }
+
   .hero-cta-btn-wrapper {
     width: 60%;
     margin: auto;
   }
+
   .section-title {
     margin-bottom: 2rem !important;
     font-size: 25px;
   }
+
   .suggest-section .section-title {
     width: 100%;
   }
+
   .ads-text {
     font-size: 45px;
   }
+
   .advert-card-wrapper {
     height: unset;
   }
+
   .trending-recipe-section .section-title {
     font-size: 25px;
     text-align: left !important;
   }
+
   .half-recipe,
   .full-recipe {
     margin-bottom: 1rem !important;
     height: 350px;
   }
+
   .picked-recipe-section .section-title {
     font-weight: 500;
     font-size: 27px;
   }
+
   .pro-section-img {
     object-fit: cover;
     width: 100%;
   }
+
   .pro-right-container {
     width: 100%;
     margin-left: 0;
   }
+
   .kitchen-pro-text {
     font-size: 30px;
     margin-top: 12px;
   }
+
   .kitchen-pro-content {
     font-size: 17px;
   }
+
   .kitchen-pro-btn {
     width: 100%;
   }
+
   .copyright-text {
     margin-top: 1.5rem;
     margin-bottom: 1.7rem;
   }
+
   .hero-img {
     object-fit: cover;
     width: 100%;
@@ -549,11 +619,13 @@ footer {
     top: -52px;
     right: -42px;
   }
+
   .options-wrapper {
     /* background-color: #333; */
     overflow: auto;
     white-space: nowrap;
   }
+
   .options-wrapper p {
     display: inline-block;
     text-align: center;
@@ -561,14 +633,42 @@ footer {
     text-decoration: none;
     margin-bottom: 0.5em;
   }
+
   .select-option:first-child {
     padding-left: 0px;
   }
+
   .select-option:not(:last-child) {
     margin-right: 12px;
   }
+
   .select-option:first-child.active::before {
     width: 110%;
     bottom: -10px;
   }
+}
+
+.menubar {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #1f1f1f;
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+.menubar a {
+  text-decoration: none;
+  font-size: 20px;
+  color: #fff;
+  font-weight: 300;
+}
+.menubar button{
+  background-color: #f3cf00 !important;
+  color: #1f1f1f;
+
+
 }
